# AutoSpectra

./: .cache  .gitignore  AV-Cluster.pro  Autopilot_gear_selector.ino  CMakeLists.txt  Fota.qml  Gauge_animation.qml  Instrument_Cluster.qml  OldSpotify.py  README.md  Spotify.py  SpotifyReceiver.cpp  SpotifyReceiver.h  cardatareceiver.cpp  cardatareceiver.h  fota.cpp  fota.h  main.cpp  main.qml  mscript.py  pythonrunner.cpp  pythonrunner.h  qml.qrc  serialmanager.cpp  serialmanager.h  spotifyclient.cpp  spotifyclient.h
